[package]
name = "aht20"
version = "0.1.0"
authors = ["Jake Goodwin <jakegoodwin@gorge.works>"]
edition = "2021"
categories = ["embedded", "hardware-support", "no-std", "embedded-hal"]
description = "A driver for the AHT20 sensor modules."
readme = "README.md"
keywords = ["embedded-hal-driver", "sensor", "temprature", "humidity", "aht20"]
license = "BSD-3-Clause"
#repository = "https://"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"


# Suff that only get's included for examples, tests and benchmarks
[dev-dependencies]
embedded-hal-mock = { version = "0.10.0-rc.4", features = ["eh1"] }
